# openlesson-proofs

./: .gitignore  Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/openlesson-proof-anchor/: Cargo.toml
programs/openlesson-proof-anchor/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/openlesson-proof-anchor/src/instructions/: anchor_batch.rs  anchor_proof.rs  initialize_user_account.rs
programs/openlesson-proof-anchor/tests/: test_proof_anchor.rs
sdk/: package.json
sdk/idl/: openlesson_proof_anchor.json
sdk/src/: client.ts  index.ts  types.ts  utils.ts
tests/: devnet-smoke.ts
